--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-stream": "^6.1.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@splidejs/splide": "^3.2.1",
     "fslightbox": "^3.3.0-2",
     "maska": "^1.4.6",
